<resources>
    <string name="app_name">Справочник</string>
    <string name="firstGroup">Птицы</string>
    <string name="vorobei">Воробей</string>
    <string name="ivolga">Иволга</string>
    <string name="soroka">Сорока</string>
    <string name="vorobeiDescribe">Одна из самых известных птиц, обитающая по соседству с жилищем человека (отсюда её видовое название «домовый») и хорошо узнаваемая как по внешнему виду, так и по характерному чириканью.</string>
    <string name="ivolgaDescribe">Небольшая яркая птица, единственный представитель семейства иволговых, распространённый в умеренном климате северного полушария.Шумная и подвижная, обычно держится в кроне деревьев, преимущественно лиственных. Необщительна, встречается в одиночку либо парами.</string>
    <string name="sorokaDescribe">Сорока считается одной из самых интеллектуальных птиц. У сорок были обнаружены тщательно продуманные социальные ритуалы, включая, возможно, выражение печали. Сорока — единственная известная на данный момент птица, способная узнать себя в зеркале, в отличие, например, от попугая, который воспринимает собственное отражение как другого попугая.</string>

    <string name="secondGroup">Млекопитающие</string>
    <string name="cow">Корова</string>
    <string name="mouse">Мышь</string>
    <string name="wolf">Волк</string>
    <string name="cowDescribe">Коров отличает массивное туловище удлиненной формы с характерно вогнутой спиной.Средний вес коровы составляет 750 кг при минимальном весе у маленьких особей в 147 кг.</string>
    <string name="mouseDescribe">У этих грызунов довольно короткая шея. На заостренной мордочке видны маленькие черные глаза-бусинки и небольшие полукруглые уши, позволяющие мышам хорошо слышать. Тонкие и чувствительные усы, растущие вокруг носа, дают им возможность прекрасно ориентироваться в окружающей обстановке.</string>
    <string name="wolfDescribe">Внешне волки похожи на больших собак с сильным, мускулистым телом и высокими ногами, только гривистые волки больше напоминают длинноногих лисиц, а красные волки обладают особенностями волков, лисиц и шакалов.</string>

    <string name="thirdGroup">Рыбы</string>
    <string name="korop">Короп</string>
    <string name="okunb">Окунь</string>
    <string name="salar">Лосось</string>
    <string name="koropDescribe">Вид пресноводных лучепёрых рыб семейства карповых. Методом селекции получены культурные формы. Внесён в международный список 100 самых опасных инвазивных видов.</string>
    <string name="salarDescribe">Один из ценнейших промысловых видов среди лососей. Мясо и икра сёмги обладают высокими гастрономическими качествами и являются деликатесными продуктами.</string>
    <string name="okunbDescribe">вид лучепёрых рыб рода пресноводных окуней семейства окунёвых.Речной окунь относится к хищным рыбам: в рационе взрослого окуня значительную долю занимают другие пресноводные рыбы.</string>

    <string name="herbs">Травы</string>
    <string name="bambuk">Бамбук</string>
    <string name="bambukDescribe">Бамбук образует скопления средней скученности и не имеет шипов. У него ярко-жёлтые стебли с зелёными полосками и тёмно-зелёные листья. Стебли неровные, негнущиеся, с толстыми стенками, крепкие.</string>
    <string name="vasilek">Василек</string>
    <string name="vasilekDescribe">Цветок Василек относится к роду травянистых растений семейства Астровые или еще это семейство называют Сложноцветные. У цветка прямой стебель, который может достигать размеров свыше метра в высоту.</string>
    <string name="oduvan">Одуванчик</string>
    <string name="oduvanDescribe">Хорошо известное растение с розеткой прикорневых листьев и крупными ярко-жёлтыми соцветиями-корзинками из язычковых цветков.</string>

    <string name="trees">Деревья</string>
    <string name="klen">Клен</string>
    <string name="klenDescribe">Большинство видов клёна представляют собой деревья 10—40 метров высотой, но среди них встречаются и кустарники 5—10 метров высотой с рядом небольших веток, растущих от основания ствола. </string>
    <string name="dub">Дуб</string>
    <string name="dubDescribe"> Дуб широко славится своей мощностью и силой, высота дуба может составлять 50 метров. Эти деревья растут довольно медленно, прибавляя с каждым годом вначале сантиметры в высоту, и только затем – в ширину.</string>
    <string name="sosna">Сосна</string>
    <string name="sosnaDescribe">Это вечнозеленое хвойное дерево, кустарник или стланик, относится к классу хвойные, порядку сосновые, семейству сосновые, роду сосны. Продолжительность жизни сосны колеблется от 100 до 600 лет. Сегодня встречаются единичные деревья, возраст которых приближается к 5 векам.</string>

    <string name="shrubs">Кустарники</string>
    <string name="smorodina">Смородина</string>
    <string name="smorodinaDescribe">Черная смородина — многолетний кустарник небольшого размера — 1-2 метра. Листья гладкие с зазубренными краями. Цветет гроздьями мелких невзрачных цветков розовато-серого цвета. </string>
    <string name="malina">Малина</string>
    <string name="malinaDescribe">Малина – это многолетнее растение с очень развитым и извилистым корневищем, на котором образуется множество придаточных корней. </string>
    <string name="sirenb">Сирень</string>
    <string name="sirenbDescribe">Сирень – многоствольный листопадный кустарник, реже дерево. Листья сирени простые, цельнокрайние, яйцевидные, овальные или ланцетные, с заостренными концами; впрочем, встречаются сирени с рассеченными и перистыми листьями; долго держатся на растении.</string>

    <string name="animals">ЖИВОТНЫЕ</string>
    <string name="plants">РАСТЕНИЯ</string>
    <string name="animalsDescribe"></string>
    <string name="plantsDescribe"></string>
</resources>